k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myrock-app
# naming the resource/ deployment
spec:
  replicas: 2
  selector:
# matchlabel means which pods to manage by selecting the labels
    matchLabels:
      app: myrock-app
# template means how to create each pods
  template:
    metadata:
      labels:
#labels means how to identify the pods for selection
        app: myrock-app
# spec means defining the container inside pods
    spec:
      containers:
      - name: myrock-app
        image: omayer111/myrock-app:latest
        ports:
        - containerPort: 8080
